# cloudopt

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_SPEC.md  README.md  SECURITY.md  TESTING.md  alembic.ini  docker-compose.yml  pyproject.toml
.cursor/rules/: branch-workflow.mdc  ci-pre-pr.mdc  conventional-commits-versioning.mdc  dependabot-prs.mdc  git-commit-pr-messages.mdc  long-running-sop.mdc  pr-review.mdc  security.mdc  subagent-cost-routing.mdc
.cursor/skills/dependabot-prs/: SKILL.md
.github/: BRANCH_PROTECTION_AND_RELEASE.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/rulesets/: main.json
.github/workflows/: ci-cli.yml  ci-e2e.yml  ci-web-e2e.yml  ci-web.yml  ci.yml  codeql.yml  release.yml  security.yml  version-check.yml
alembic/: env.py
alembic/versions/: 001_initial_scans_and_findings.py  002_tenant_and_rag_chunks.py  003_scan_kind_and_audit_findings.py  004_rag_chunk_upsert_key.py
apps/: __init__.py
apps/api/: __init__.py  main.py
apps/api/routes/: findings.py  health.py  metrics.py  rag.py  scans.py
apps/cli/: __init__.py  main.py
apps/cli/commands/: audit.py  scan.py
apps/web/: Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.mts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/findings/: page.tsx
apps/web/app/rag/: page.tsx
apps/web/app/scans/: page.tsx
apps/web/components/: AppChrome.tsx  FindingsView.tsx  OverviewDashboard.tsx  RagView.tsx  ScanDetailView.tsx  ScansView.tsx  ui.test.tsx  ui.tsx
apps/web/e2e/: overview.spec.ts  rag.spec.ts  scans.spec.ts
apps/web/lib/: api.ts  cloudopt-api.d.ts
apps/web/scripts/: cloudopt-openapi.json
apps/worker/: __init__.py  jobs.py  main.py
docs/: LLM_AND_ACCOUNT_CONTEXT.md  MODEL_GUIDANCE.md
e2e/hurl/: smoke.hurl
scripts/: apply-main-ruleset.sh  e2e-stack-smoke.sh
tests/: __init__.py  conftest.py  test_agent_phase_c.py  test_api_integration.py  test_cli.py  test_cloud_audit_normalize.py  test_health.py  test_llm_config.py  test_rag.py  test_rag_integration.py  test_routing.py  test_worker_integration.py  test_worker_jobs.py
tests/eval/: test_finops_eval.py
tests/eval/fixtures/: golden_finops.json
tests/helpers/: __init__.py  scans.py
(+1 files in other folders)
