[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudopt"
version = "0.5.0"
description = "AI-assisted cloud platform for AWS and Kubernetes: FinOps, posture audits, and Kubernetes best-practice checks"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "CloudOpt" }]
keywords = [
    "finops",
    "aws",
    "kubernetes",
    "cost-optimization",
    "security",
    "compliance",
    "devops",
    "sre",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.5",
    # CLI
    "typer>=0.9.0",
    # Worker / jobs
    "redis>=5.0.0",
    "rq>=1.15.0",
    "rq-scheduler>=0.13.0",
    # Config & env
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # HTTP
    "httpx>=0.26.0",
    # AWS (placeholder / minimal)
    "boto3>=1.34.0",
    # AI (placeholder)
    "openai>=1.12.0",
    # Utils
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "bandit[toml]>=1.7.0",
]

[project.scripts]
cloudopt = "apps.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "packages*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "S", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests use assert intentionally (not security-sensitive runtime checks).
"tests/**" = ["S101"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
tag_format = "v{version}"
allow_zero_version = true
commit_message = "chore(release): release v{version}"
